# awesome-cognitive-ai

./: CONTRIBUTING.md  README.md  pyproject.toml  spanish-note.md
docs/: README.es.md  autoeval-pipeline.md
